--- a/sodastream-calculations.ipynb
+++ b/sodastream-calculations.ipynb
@@ -249,8 +249,17 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "At just 23 cents per can, it seems drastically cheaper to buy A&W diet root beer (whose taste I prefer) to continuing to operate my sodastream (which costs "
+    "At just 23 cents per can, it seems drastically cheaper to buy A&W diet root beer (whose taste I prefer) to continuing to operate my sodastream (which costs 42 cents per can)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
